syntax = "proto3";

package calculator;

option java_package = "com.proto.dummy";
option java_multiple_files = true;

message Calculator {
    int32 firstNumber = 1;
    int32 secondNumber = 2;
}

message CalculatorRequest {
    Calculator calculator = 1;
}

message CalculatorResponse {
    int32 result = 1;
}

service CalculatorService {
    // Unary
    rpc Calculator(CalculatorRequest) returns (CalculatorResponse) {};
}